# epidemio_spread

./: CMakeLists.txt  README.md  bdm.json  run.sh
openlb/: config.mk
src/: behavior.h  epidemio_spread.cc  epidemio_spread.h  geom_construct.h  human.h  navigation_util.h  openlb_export.h  openlb_sim.cc  openlb_sim.h  population_creation.h  population_creation_utils.h  sim-param.h
